[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gptilt-models"
version = "0.1.0"
description = "Models and experiments for the GPTilt project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "polars >= 1.27.1",
    "scikit-learn",
    "torch",          # for later if you're using PyTorch models
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-include = [
    "gptilt_models",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "gptilt_models",
]
