[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gptilt-models"
version = "0.1.0"
description = "Models and experiments for the GPTilt project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "comet-ml >= 3.49.10",
    "datasets >= 3.6.0",
    "huggingface-hub >= 0.30.2",
    "numpy",
    "pandas",
    "polars >= 1.27.1",
    "scikit-learn",
    "torch",
    "tqdm >= 4.65.0",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.hatch.build]
include = ["src/**"]
sources = ["src"]
